# cpp_scratch_pad

./: .gitignore  Benchmark - variable decimals.ods  CMakeLists.txt  README.md  benchmarks.md  conanfile.txt  output.md  output.txt
include/catch2/: catch_user_config.hpp
share/pkgconfig/: catch2-with-main.pc  catch2.pc
src/: main.cpp  numeric.cpp  vs_glib_ustring.cpp  withCTRE.cpp
